--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,7 +8,10 @@
     "popper.js": "^1.14.6",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.2"
+    "react-router-bootstrap": "^0.24.4",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.2",
+    "reactstrap": "^6.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
