--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,6 +7,7 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.14.6",
     "react": "^16.7.0",
+    "react-bootstrap": "^1.0.0-beta.3",
     "react-dom": "^16.7.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
