--- a/my-app/package.json
+++ b/my-app/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "bootstrap": "^4.2.1",
     "jquery": "^3.3.1",
+    "mongodb": "^3.1.10",
+    "mongodb-core": "^3.1.9",
     "popper.js": "^1.14.6",
     "react": "^16.7.0",
     "react-bootstrap": "^1.0.0-beta.3",
