--- a/fullstack_app/package.json
+++ b/fullstack_app/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^4.1.0"
+    "concurrently": "^4.1.0",
+    "mongoose": "^5.4.2"
   }
 }
