--- a/fullstack_app/backend/package.json
+++ b/fullstack_app/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "fs": "0.0.1-security",
     "mongoose": "^5.4.2",
     "morgan": "^1.9.1"
   }
