--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
     "reactstrap": "^6.5.0",
+    "serve": "^10.1.1",
     "universal-cookie": "^3.0.7"
   },
   "scripts": {
