--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "popper.js": "^1.14.6",
     "react": "^16.7.0",
     "react-bootstrap": "^1.0.0-beta.3",
+    "react-bottom-scroll-listener": "^2.1.1",
     "react-dom": "^16.7.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
