--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^1.0.0-beta.3",
     "react-bottom-scroll-listener": "^2.1.1",
     "react-dom": "^16.7.0",
+    "react-recaptcha-v3": "^1.0.2",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
