--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
     "reactstrap": "^6.5.0",
+    "recaptcha-v3-react": "^3.0.3",
     "serve": "^10.1.1",
     "universal-cookie": "^3.0.7"
   },
