--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,5 +19,5 @@ pull:
     - >
       ssh -tt ubuntu@palc.viarezo.fr
       "cd /home/ubuntu/objets-trouves &&
-      echo $CI_COMMIT_REF_NAME &&
+      git checkout $CI_COMMIT_REF_NAME &&
       git pull"
