--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
+    "browser-image-compression": "^1.0.2",
     "date": "^1.0.2",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.6",
