--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,7 @@ deploy:
       cp /home/ubuntu/objets-trouves/config/server/config_backend.json /home/ubuntu/objets-trouves/backend/ &&
       cp /home/ubuntu/objets-trouves/config/server/config_client.json /home/ubuntu/objets-trouves/client/src/ &&
       git checkout master &&
+      git stash &&
       git pull &&
       sudo cp /home/ubuntu/objets-trouves/nginx.conf /etc/nginx/sites-available/palc &&
       cd /home/ubuntu/objets-trouves/backend &&
