--- a/package.json
+++ b/package.json
@@ -10,12 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^4.1.0",
-    "mongoose": "^5.4.2"
+    "concurrently": "^4.1.0"
   },
   "devDependencies": {
-    "eslint": "^5.16.0",
-    "eslint-config-google": "^0.12.0",
-    "eslint-plugin-react": "^7.12.4"
   }
 }
